--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,66 +1,1 @@
-version: '3.8'
-
-services:
-  redis:
-    image: redis:7-alpine
-    container_name: algent-redis
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    command: redis-server --appendonly yes
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    networks:
-      - agentic-network
-
-  postgres:
-    image: postgres:15-alpine
-    container_name: algent-postgres
-    environment:
-      POSTGRES_DB: agentic
-      POSTGRES_USER: agentic
-      POSTGRES_PASSWORD: agentic123
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U agentic"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    networks:
-      - agentic-network
-
-  agent-runner:
-    build: .
-    container_name: algent-system
-    environment:
-      - REDIS_URL=redis://redis:6379
-      - POSTGRES_URL=postgresql://agentic:agentic123@postgres:5432/agentic
-      - LOG_LEVEL=INFO
-    ports:
-      - "8000:8000"
-    depends_on:
-      redis:
-        condition: service_healthy
-      postgres:
-        condition: service_healthy
-    volumes:
-      - ./config:/app/config:ro
-      - agent_logs:/app/logs
-    networks:
-      - agentic-network
-
-volumes:
-  redis_data:
-  postgres_data:
-  agent_logs:
-
-networks:
-  agentic-network:
-    driver: bridge
+version: '3.8'\n\nservices:\nredis:\nimage: redis:7-alpine\ncontainer_name: algent-redis\nports:\n- "6379:6379"\nenvironment:\n- REDIS_PASSWORD=${REDIS_PASSWORD:-redispass}\ncommand: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-redispass}\nhealthcheck:\ntest: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-redispass}", "ping"]\ninterval: 30s\ntimeout: 10s\nretries: 3\nvolumes:\n- algent_redis_data:/data\nnetworks:\n- algent-network\n\npostgres:\nimage: postgres:15-alpine\ncontainer_name: algent-postgres\nenvironment:\n- POSTGRES_DB=${POSTGRES_DB:-algent}\n- POSTGRES_USER=${POSTGRES_USER:-algent}\n- POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgrespass}\nports:\n- "5432:5432"\nvolumes:\n- algent_postgres_data:/var/lib/postgresql/data\nhealthcheck:\ntest: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-algent} -d ${POSTGRES_DB:-algent}"]\ninterval: 30s\ntimeout: 10s\nretries: 3\nnetworks:\n- algent-network\n\napi-server:\nimage: algent-api:earthly\ncontainer_name: algent-api-server\nenvironment:\n- REDIS_URL=${REDIS_URL:-redis://redis:6379}\n- POSTGRES_DB=${POSTGRES_DB:-algent}\n- POSTGRES_USER=${POSTGRES_USER:-algent}\n- POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgrespass}\n- API_HOST=${API_HOST:-localhost}\n- API_PORT=${API_PORT:-8000}\n- LOG_LEVEL=${LOG_LEVEL:-INFO}\n- START_API_SERVER=true\nports:\n- "${API_PORT:-8000}:8000"\ndepends_on:\nredis:\ncondition: service_healthy\npostgres:\ncondition: service_healthy\nrestart: unless-stopped\nnetworks:\n- algent-network\n\nfile-processor:\nimage: algent-file-processor:earthly\ncontainer_name: algent-file-processor\nenvironment:\n- REDIS_URL=${REDIS_URL:-redis://redis:6379}\n- POSTGRES_DB=${POSTGRES_DB:-algent}\n- POSTGRES_USER=${POSTGRES_USER:-algent}\n- POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgrespass}\n- LOG_LEVEL=${LOG_LEVEL:-INFO}\n- AGENT_TYPE=file_processor\n- AGENT_ID=file-processor-1\ndepends_on:\nredis:\ncondition: service_healthy\npostgres:\ncondition: service_healthy\napi-server:\ncondition: service_started\nrestart: unless-stopped\nnetworks:\n- algent-network\n\nagent-runner:\nimage: algent:earthly\ncontainer_name: algent-agent-runner\nenvironment:\n- REDIS_URL=${REDIS_URL:-redis://redis:6379}\n- POSTGRES_DB=${POSTGRES_DB:-algent}\n- POSTGRES_USER=${POSTGRES_USER:-algent}\n- POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgrespass}\n- LOG_LEVEL=${LOG_LEVEL:-INFO}\n- RUN_DEMO_AGENTS=${RUN_DEMO_AGENTS:-false}\n- AGENT_HEARTBEAT_INTERVAL=${AGENT_HEARTBEAT_INTERVAL:-30}\n- AGENT_TASK_TIMEOUT=${AGENT_TASK_TIMEOUT:-300}\ndepends_on:\nredis:\ncondition: service_healthy\npostgres:\ncondition: service_healthy\napi-server:\ncondition: service_started\nrestart: unless-stopped\nnetworks:\n- algent-network\n\nvolumes:\nalgent_redis_data:\nalgent_postgres_data:\n\nnetworks:\nalgent-network:\ndriver: bridge
