--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
-
 # Additional dependencies for Quick Wins
 fastapi>=0.104.0
 uvicorn>=0.24.0
+aiohttp>=3.9.0
+redis>=5.0.0
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
+typer[all]>=0.9.0
+rich>=13.7.0
+httpx>=0.25.0
+cryptography>=41.0.0
+PyJWT>=2.8.0
+bcrypt>=4.1.0
+sqlalchemy>=2.0.0
+asyncpg>=0.29.0
+requests>=2.31.0
+async-timeout>=4.0.0
+
